# Neural-Network-for-XOR-Problem-in-Cpp

./: .gitignore  CMakeLists.txt  README.md  log_loss.txt  log_weights.txt  logs_plot.py
